Header and Hero section added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'deer': '#B68C5A',
                     }
                 }
             }
@@ -40,10 +40,110 @@
 
 
 </head>
-<body>
-    <header class="container mx-auto"></header>
+<body class="font-poppins">
+    <header class="container mx-auto px-5 py-3 lg:px-0">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a>Home</a></li>
+                            <li>
+                                <a>
+                                    Services
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    Cases
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    Blog
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    Contact Us
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-xl">
+                        <img src="images/logo2.png" alt="" class="w-2/3">
+                    </a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="hover:bg-transparent hover:text-deer">Home</a></li>
+                        <li>
+                            <a class="hover:bg-transparent hover:text-deer">
+                                Services
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="hover:bg-transparent hover:text-deer">
+                                Cases
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="hover:bg-transparent hover:text-deer">
+                                Blog
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="hover:bg-transparent hover:text-deer">
+                                Contact Us
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <a class="btn bg-deer border-deer hover:bg-deer hover:border-deer text-white">Free Consultation</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-    <main class="container mx-auto"></main>
+    <main class="container mx-auto">
+
+        <!-- Hero section -->
+         <section>
+            <div class="hero h-[550px] rounded-lg"
+                style="background-image: url(images/banner.png);">
+                <div class="hero-overlay bg-opacity-65 rounded-lg"></div>
+                <div class="hero-content text-neutral-content text-center">
+                    <div class="max-w-3xl">
+                        <h1 class="mb-6 text-7xl text-white font-bold font-eb-garamond">We Provide Effective Legal Solutions</h1>
+                        <p class="mb-8">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                            by injected humour.
+                        </p>
+                        <form class="flex gap-6 justify-center">
+                            <input type="text" placeholder="Search your services" class="w-[500px] input input-bordered" required />
+                            <a class="btn bg-deer border-deer hover:bg-deer hover:border-deer text-white w-[150px]">Search</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+    </main>
 
     <footer></footer>
 </body>
