Update Contact form submit button padding and width

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                             <textarea placeholder="Your Message" class="textarea textarea-bordered textarea-md text-base w-full h-[162px]"></textarea>
                         </div>
                         <div class="form-control mt-6">
-                            <button class="py-5 bg-deer text-white rounded-lg">Send Message</button>
+                            <button class="p-5 bg-deer text-white rounded-lg w-full">Send Message</button>
                         </div>
                     </form>
                 </div>
